--- a/src/_styles/_header.scss
+++ b/src/_styles/_header.scss
@@ -25,6 +25,9 @@
         }
       }
     }
+    p {
+      margin-bottom: 10px;
+    }
     p,
     .phone {
       font-size: 25px;
@@ -34,14 +37,13 @@
       display: inline-flex;
       align-items: center;
       column-gap: 15px;
-      flex-wrap: wrap;
       @media (max-width: 1400px) {
         font-size: 18px;
       }
 
       @media (max-width: 991px) {
         font-size: 16px;
-
+        line-height: 20px;
         img {
           max-width: 25px;
           max-height: 25px;
