--- a/src/_styles/_header.scss
+++ b/src/_styles/_header.scss
@@ -202,7 +202,17 @@
             color: #000000;
             text-decoration: none;
             transition: color 0.3s ease;
-
+            &.book-btn {
+              display: inline-flex;
+              align-items: center;
+              min-height: 40px;
+              min-width: 100px;
+              padding: 5px 20px;
+              border-radius: 5px;
+              background: $themeColor;
+              color: #fff;
+              justify-content: center;
+            }
             &:hover {
               color: $themeColor;
             }
