--- a/src/_styles/style.scss
+++ b/src/_styles/style.scss
@@ -1654,3 +1654,71 @@ section.cta-area {
     height: 400px !important;
   }
 }
+.coming-soon-area {
+  position: relative;
+  z-index: 1;
+  .next-video-bg-text {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    .coming-soon-content-area {
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      max-height: 100vh;
+      z-index: 11;
+      display: flex !important;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+}
+.coming-soon-wrap {
+  h1 {
+    font-size: 50px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff;
+    letter-spacing: 2px;
+    text-align: center;
+    font-family: $montserratFont;
+  }
+  .social-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 15px;
+    margin-top: 30px;
+    a {
+      font-size: 25px;
+      color: #fff;
+    }
+  }
+}
+.coming-soon-form {
+  position: relative;
+  margin-top: 30px;
+  input {
+    width: 100%;
+    height: 55px;
+    background: #fff;
+    transition: all 0.4s ease-in-out 0s;
+    padding: 5px 140px 5px 20px;
+    &:focus {
+      outline: none;
+    }
+  }
+  button {
+    position: absolute;
+    right: 0;
+    top: 0;
+    min-width: 100px;
+    height: 55px;
+    background: $themeColor;
+    color: #fff;
+  }
+}
