--- a/src/_styles/_header.scss
+++ b/src/_styles/_header.scss
@@ -24,6 +24,26 @@
           color: $themeColor;
         }
       }
+      .MuiButton-root {
+        color: #ffffff;
+        border: none;
+        padding: 8px 15px;
+        font-size: 16px;
+        min-width: 120px;
+        height: 35px;
+        margin: 0 0 0 20px;
+        &:hover {
+          background-color: transparent;
+        }
+        .MuiSvgIcon-root {
+          font-size: 20px;
+        }
+        img {
+          width: 20px;
+          height: 12px;
+          margin-right: 8px;
+        }
+      }
     }
     p {
       margin-bottom: 10px;
